--- a/_posts/2015/2015-09-06-python.md
+++ b/_posts/2015/2015-09-06-python.md
@@ -5,6 +5,9 @@ date:   2015-09-06 21:57:04
 categories: jekyll update
 ---
 
+![Dr Evil](/img/dr_evil.jpg =250x)
+![Dr Evil](/img/dr_evil.jpg)
+
 {% highlight python linenos%}
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
